[gd_scene load_steps=2 format=3 uid="uid://dypncu8rnysyf"]

[ext_resource type="Script" uid="uid://cn8hu2jru2qeo" path="res://src/managers/WaveManager.gd" id="1_raetk"]

[node name="WaveManager" type="Node"]
script = ExtResource("1_raetk")

[node name="IntermissionTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
